data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2373.wast
;; 3. **Test Description: Deeply Nested Function Calling:**    - Create nested functions where a `br_table` inside an innermost function leads to a `call` to another function, testing the function's integration with `br_table`.    - **Constraint Checked:** Ensures proper function integration and branching without altering the stack improperly.    - **Relation to Incorrect Function Sequence:** Verifies that function sequences from deep nesting return correctly and maintain control flow integrity.

(assert_invalid
  (module
    (func $inner (param i32) (result i32)
      (block (result i32)
        (loop (result i32)
          (br_table 0 1 (i32.const 0) (local.get 0))
        )
      )
    )
    (func $outer
      (block
        (br_table 0 1 (call $inner (i32.const 1)))
      )
    )
  )
  "type mismatch"
)